--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -11,14 +11,20 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "humanize-duration": "^3.33.0",
     "moment": "^2.30.1",
+    "quill": "^2.0.3",
+    "rc-progress": "^4.0.0",
     "react": "^19.1.0",
     "react-big-calendar": "^1.19.4",
     "react-calendar": "^6.0.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
+    "react-simple-star-rating": "^5.1.7",
+    "react-youtube": "^10.1.0",
     "recharts": "^2.15.3",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^4.1.8",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
